# 1group-cuisine-app2

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD_SUMMARY.txt  DATABASE_SETUP.md  DEPLOYMENT_GUIDE.md  FILES_CREATED.md  QUICKSTART.md  README.md  docker-compose.yml  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/brand/: page.tsx
app/chefs/: layout.tsx  page.tsx
app/create/: layout.tsx  page.tsx
app/marketplace/: page.tsx
app/masterclasses/: layout.tsx  page.tsx
app/recipes/: layout.tsx  page.tsx
app/search/: page.tsx
app/suppliers/: page.tsx
app/sustainability/: page.tsx
components/: EmbeddedPlatingStudio.tsx
components/auth/: AuthProvider.tsx
components/chat/: TelegramChat.tsx
components/chef/: ChefCard.tsx  ChefProfile.tsx
components/layout/: Footer.tsx  Navbar.tsx  Sidebar.tsx
components/masterclass/: EpisodeList.tsx  (+1 more)
crawler/: .env.example  .gitignore  Dockerfile  INDEX.md  PROJECT_STRUCTURE.md  README.md  SUMMARY.md  cli.py  docker-compose.yml  pyproject.toml
crawler/config/: crawler_config.yaml
crawler/src/: __init__.py  chef_list.py  config.py  discovery.py  extraction.py  models.py  normalizer.py  orchestrator.py  review.py  utils.py
hooks/: useAuth.ts  useChefs.ts  useRecipes.ts
lib/: api.ts  auth.ts  constants.ts  jobStore.ts  mockData.ts  utils.ts  youtube.ts
prisma/: schema.prisma  seed.ts
public/: robots.txt  sitemap.xml
scripts/: setup-db.sh
store/: authStore.ts  uiStore.ts
types/: index.ts
(+49 files in other folders)
